Minifile server install in gce improvement (still have problem with static build with go 1.8)

--- a/miniFileServer/mfs.gke.yaml
+++ b/miniFileServer/mfs.gke.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
       - image: gcr.io/${DEVSHELL_PROJECT_ID}/minifileserver:v0
         name: minifileserver
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
           protocol: TCP
